--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
 
       - name: Build MobileGlues
         run: |
-          cd src/main/cpp 
+          cd MobileGlues-cpp
           wget https://github.com/leetal/ios-cmake/raw/master/ios.toolchain.cmake
           cmake -B build \
             -DCMAKE_TOOLCHAIN_FILE=ios.toolchain.cmake \
@@ -26,4 +26,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: MobileGlues-iOS-dylib
-          path: /Users/runner/work/MobileGlues/MobileGlues/src/main/cpp/build
+          path: /Users/runner/work/MobileGlues/MobileGlues/MobileGlues-cpp/build
