--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "MobileGlues-cpp/include/FastSTL"]
 	path = MobileGlues-cpp/include/FastSTL
 	url = https://github.com/MobileGL-Dev/FastSTL.git
+[submodule "MobileGlues-cpp/3rdparty/glslang"]
+	path = MobileGlues-cpp/3rdparty/glslang
+	url = https://github.com/KhronosGroup/glslang.git
+[submodule "MobileGlues-cpp/3rdparty/SPIRV-Cross"]
+	path = MobileGlues-cpp/3rdparty/SPIRV-Cross
+	url = https://github.com/KhronosGroup/SPIRV-Cross.git
