--- a/MobileGlues-cpp/CMakeLists.txt
+++ b/MobileGlues-cpp/CMakeLists.txt
@@ -1,24 +1,41 @@
 cmake_minimum_required(VERSION 3.22.1)
-
 project("mobileglues")
-
 enable_language(CXX)
-
 set(CMAKE_CXX_STANDARD 20)
-
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+
+# glslang & SPIRV-Cross
+set(ENABLE_RTTI                ON  CACHE BOOL "Enables RTTI (will be took by glslang)" FORCE)
+set(ENABLE_HLSL                OFF CACHE BOOL "Disable HLSL input for glslang" FORCE)
+set(BUILD_EXTERNAL             OFF CACHE BOOL "Disable build external dependencies for glslang" FORCE)
+set(ENABLE_GLSLANG_BINARIES    OFF CACHE BOOL "Disable glslangValidator/spirv-remap" FORCE)
+set(ENABLE_OPT                 OFF CACHE BOOL "Disable SPIRV-Tools opt usage in glslang" FORCE)
+set(BUILD_EXTERNAL             OFF CACHE BOOL "Don't build external deps in External/" FORCE)
+
+set(SPIRV_CROSS_ENABLE_C_API   ON  CACHE BOOL "Enable C API" FORCE)
+set(SPIRV_CROSS_ENABLE_GLSL    ON  CACHE BOOL "Enable GLSL backend" FORCE)
+set(SPIRV_CROSS_ENABLE_REFLECT OFF CACHE BOOL "Disable reflect" FORCE)
+set(SPIRV_CROSS_ENABLE_HLSL    OFF CACHE BOOL "Disable HLSL backend" FORCE)
+set(SPIRV_CROSS_ENABLE_MSL     OFF CACHE BOOL "Disable MSL backend" FORCE)
+set(SPIRV_CROSS_ENABLE_CPP     OFF CACHE BOOL "Disable C++ API target" FORCE)
+set(SPIRV_CROSS_CLI            OFF CACHE BOOL "Disable CLI binary" FORCE)
+set(SPIRV_CROSS_STATIC         ON  CACHE BOOL "Prefer static libs" FORCE)
+set(SPIRV_CROSS_ENABLE_UTIL    OFF CACHE BOOL "Disable util" FORCE)
+
+add_subdirectory(3rdparty/glslang)
+add_subdirectory(3rdparty/SPIRV-Cross)
+
 if(MACOS)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w -fvisibility=default -funwind-tables -g -D_THREAD_SAFE -fPIC -stdlib=libc++")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -w -g -std=gnu99 -funwind-tables -fvisibility=hidden")
-        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libstdc++")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w -fvisibility=default -funwind-tables -g -D_THREAD_SAFE -fPIC -stdlib=libc++")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -w -g -std=gnu99 -funwind-tables -fvisibility=hidden")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libstdc++")
 else()
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w -fvisibility=hidden -funwind-tables -g -D_THREAD_SAFE -fPIC")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -w -g -std=gnu99 -funwind-tables -fvisibility=hidden")
-        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libstdc++")
-        set(CMAKE_ANDROID_STL_TYPE c++_static)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w -fvisibility=hidden -funwind-tables -g -D_THREAD_SAFE -fPIC")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -w -g -std=gnu99 -funwind-tables -fvisibility=hidden")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libstdc++")
+    set(CMAKE_ANDROID_STL_TYPE c++_static)
 endif()
 
 if (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
@@ -33,21 +50,21 @@ if (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
     check_cxx_compiler_flag("-flto" HAS_LTO_CXX)
 
     if (LTOSupported OR (HAS_LTO_C AND HAS_LTO_CXX))
-        # Check ThinLTO
-        check_c_compiler_flag("-flto=thin" HAS_THINLTO_C)
-        check_cxx_compiler_flag("-flto=thin" HAS_THINLTO_CXX)
-        if (HAS_THINLTO_C AND HAS_THINLTO_CXX)
-            message(STATUS "ThinLTO supported, using -flto=thin")
+    # Check ThinLTO
+    check_c_compiler_flag("-flto=thin" HAS_THINLTO_C)
+    check_cxx_compiler_flag("-flto=thin" HAS_THINLTO_CXX)
+    if (HAS_THINLTO_C AND HAS_THINLTO_CXX)
+        message(STATUS "ThinLTO supported, using -flto=thin")
 
-            add_compile_options(-flto=thin)
-            add_link_options(-flto=thin)
-        else()
-            # ThinLTO is not supported
-            message(STATUS "ThinLTO not available, fallback to CMAKE IPO")
-            set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
-        endif()
+        add_compile_options(-flto=thin)
+        add_link_options(-flto=thin)
     else()
-        message(STATUS "IPO not supported: ${LTOError}")
+        # ThinLTO is not supported
+        message(STATUS "ThinLTO not available, fallback to CMAKE IPO")
+        set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
+    endif()
+    else()
+    message(STATUS "IPO not supported: ${LTOError}")
     endif()
 endif()
 
@@ -68,110 +85,75 @@ endif()
 
 set(PROFILING OFF)
 
-find_library(GLSLANG_LIB glslang PATHS ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/)
-
 add_library(${CMAKE_PROJECT_NAME} SHARED
-        init.cpp
-        main.cpp
-        gl/gl_stub.cpp
-        gl/gl_native.cpp
-        gl/gl.cpp
-        gl/envvars.cpp
-        gl/log.cpp
-        gl/program.cpp
-        gl/shader.cpp
-        gl/framebuffer.cpp
-        gl/texture.cpp
-        gl/drawing.cpp
-        gl/multidraw.cpp
-        gl/mg.cpp
-        gl/buffer.cpp
-        gl/getter.cpp
-        gl/pixel.cpp
-        gl/random_string_gen.cpp
-        gl/ExtWrappers/DSAWrapper.cpp
-        gl/ExtWrappers/MultiBindWrapper.cpp
-        gl/glsl/glsl_for_es.cpp
-        gl/glsl/cache.cpp
-        gl/FSR1/FSR1.cpp
-        
-        gl/vertexattrib.cpp
-        glx/lookup.cpp
-        egl/egl.cpp
-        egl/loader.cpp
-        gles/loader.cpp
-        config/cJSON.c
-        config/config.cpp
-        config/gpu_utils.cpp
-        config/settings.cpp
+    init.cpp
+    main.cpp
+    gl/gl_stub.cpp
+    gl/gl_native.cpp
+    gl/gl.cpp
+    gl/envvars.cpp
+    gl/log.cpp
+    gl/program.cpp
+    gl/shader.cpp
+    gl/framebuffer.cpp
+    gl/texture.cpp
+    gl/drawing.cpp
+    gl/multidraw.cpp
+    gl/mg.cpp
+    gl/buffer.cpp
+    gl/getter.cpp
+    gl/pixel.cpp
+    gl/random_string_gen.cpp
+    gl/ExtWrappers/DSAWrapper.cpp
+    gl/ExtWrappers/MultiBindWrapper.cpp
+    gl/glsl/glsl_for_es.cpp
+    gl/glsl/cache.cpp
+    gl/FSR1/FSR1.cpp
+
+    gl/vertexattrib.cpp
+    glx/lookup.cpp
+    egl/egl.cpp
+    egl/loader.cpp
+    gles/loader.cpp
+    config/cJSON.c
+    config/config.cpp
+    config/gpu_utils.cpp
+    config/settings.cpp
 )
 
 target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
-        ./includes
-        ./3rdparty/glm
-        ./3rdparty/xxhash)
+    ./includes
+    ./3rdparty/glm
+    ./3rdparty/xxhash)
 target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
-if(MACOS)
-        # iOS
-        set(iOS_LIB_DIR ${CMAKE_SOURCE_DIR}/libraries/ios)
-        target_link_libraries(${CMAKE_PROJECT_NAME}
-                ${iOS_LIB_DIR}/libglslang.a
-                ${iOS_LIB_DIR}/libspirv-cross-c-shared.dylib
-                ${iOS_LIB_DIR}/libGenericCodeGen.a
-                ${iOS_LIB_DIR}/libglslang-default-resource-limits.a
-                ${iOS_LIB_DIR}/libMachineIndependent.a
-                ${iOS_LIB_DIR}/libOSDependent.a
-                ${iOS_LIB_DIR}/libSPIRV-Tools-diff.a
-                ${iOS_LIB_DIR}/libSPIRV-Tools-link.a
-                ${iOS_LIB_DIR}/libSPIRV-Tools-lint.a
-                ${iOS_LIB_DIR}/libSPIRV-Tools-opt.a
-                ${iOS_LIB_DIR}/libSPIRV-Tools-reduce.a
-                ${iOS_LIB_DIR}/libSPIRV-Tools.a
-                ${iOS_LIB_DIR}/libSPIRV.a
-                ${iOS_LIB_DIR}/libSPVRemapper.a
-                "-F${CMAKE_SOURCE_DIR}/external"
-                "-framework libEGL"
-                "-framework libGLESv2"
-                "-framework Metal"
-                "-framework Foundation"
-                "-framework QuartzCore"
-        )
-else()
-        # Android
-        find_library(GLSLANG_LIB glslang PATHS ${CMAKE_SOURCE_DIR}/libraries/arm64-v8a/)
-        target_link_libraries(${CMAKE_PROJECT_NAME}
-                ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libglslang.a
-                ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libspirv-cross-c-shared.so
-                ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libGenericCodeGen.a
-                ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libglslang-default-resource-limits.a
-                ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libMachineIndependent.a
-                ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libOSDependent.a
-                ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libSPIRV-Tools-diff.a
-                ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libSPIRV-Tools-link.a
-                ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libSPIRV-Tools-lint.a
-                ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libSPIRV-Tools-opt.a
-                ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libSPIRV-Tools-reduce.a
-                ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libSPIRV-Tools.a
-                ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libSPIRV.a
-                ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libSPVRemapper.a
-                android
-                log
-        )
-endif()
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE
+    glslang::glslang
+    spirv-cross-c
+)
 
-if(ANDROID)
-    add_custom_command(TARGET ${CMAKE_PROJECT_NAME} POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different
-            ${CMAKE_SOURCE_DIR}/libraries/${ANDROID_ABI}/libspirv-cross-c-shared.so
-            $<TARGET_FILE_DIR:${CMAKE_PROJECT_NAME}>
+if(MACOS)
+    # iOS
+    target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC
+        "-F${CMAKE_SOURCE_DIR}/external"
+        "-framework libEGL"
+        "-framework libGLESv2"
+        "-framework Metal"
+        "-framework Foundation"
+        "-framework QuartzCore"
+    )
+else()
+    # Android
+    target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC
+        android
+        log
     )
 endif()
 
 if (PROFILING)
-        find_package(Threads)
-        include_directories(${CMAKE_SOURCE_DIR}/3rdparty/perfetto/sdk)
-        add_library(perfetto STATIC ${CMAKE_SOURCE_DIR}/3rdparty/perfetto/sdk/perfetto.cc)
-        target_link_libraries(${CMAKE_PROJECT_NAME} perfetto ${CMAKE_THREAD_LIBS_INIT})
-        target_compile_definitions(${CMAKE_PROJECT_NAME} PUBLIC PROFILING=1)
+    find_package(Threads)
+    include_directories(${CMAKE_SOURCE_DIR}/3rdparty/perfetto/sdk)
+    add_library(perfetto STATIC ${CMAKE_SOURCE_DIR}/3rdparty/perfetto/sdk/perfetto.cc)
+    target_link_libraries(${CMAKE_PROJECT_NAME} perfetto ${CMAKE_THREAD_LIBS_INIT})
+    target_compile_definitions(${CMAKE_PROJECT_NAME} PUBLIC PROFILING=1)
 endif()
